--- a/scss/components/_headings.scss
+++ b/scss/components/_headings.scss
@@ -2,6 +2,6 @@
 
 h1, h2, h3, h4, h5 {
   color:$color__headers;
-  font-family:$header-font;
+  font-family:$heading-font;
   text-transform: lowercase;
 }
