--- a/scss/components/components.scss
+++ b/scss/components/components.scss
@@ -10,6 +10,7 @@
 @import 'flags';
 @import 'forms';
 @import 'headings';
+@import 'loading';
 @import 'logo';
 @import 'modals';
 @import 'off-canvas';
@@ -18,4 +19,6 @@
 @import 'progress';
 @import 'switch';
 @import 'tables';
+@import 'tabs';
+@import 'tags';
 @import 'tooltips';
