--- a/scss/components/_tabs.scss
+++ b/scss/components/_tabs.scss
@@ -2,6 +2,7 @@
   border-bottom: 1px solid $color__border;
   margin-bottom: 30px;
   text-align: center;
+  font-family:$default-font;
 
   .tab {
     border-bottom: 3px solid transparent;
