--- a/scss/components/_tags.scss
+++ b/scss/components/_tags.scss
@@ -1,49 +1,33 @@
+// Tags
+
+$tag-padding:0 10px;
+$tag-margin: 0 1.5em 0 0;
+$color__tags-text: $white;
+
 .tags {
   @extend %clearfix;
-  margin-bottom: 20px;
-
-  &:last-child {
-    margin-bottom: 0;
-  }
-
-  li {
-    display: inline-block;
-    margin: 0 25px 10px 0;
-  }
-
   .tag {
+    display: inline-block;
     border:1px solid transparent;
     font-family:$default-font;
-    @each $name, $tag-color in $tag-colors {
-      &.#{$name} {
-        background-color: #{$tag-color};
-        &:before {
-          border-left: 10px solid #{$tag-color};
-        }
-      }
-    }
-    border-radius: 2px 0 0 2px;
-    color: $white;
-    display: inline-block;
+    color: $color__tags-text;
+    text-decoration: none;
     float: left;
     line-height: 34px;
-    padding: 0 10px;
+    padding:$tag-padding;
+    margin:$tag-margin;
     position: relative;
-
-    //triangle arrow
-    &::before {
+    &:before {
+      content: '';
       border-bottom: 17px solid transparent;
       border-top: 17px solid transparent;
-      content: '';
       height: 0;
       position: absolute;
-      right: -10px;
+      right: -11px;
       top: 0;
       width: 0;
     }
-
-    // bullet
-    &::after {
+    &:after {
       background: $white;
       border-radius: 6px;
       content: '';
@@ -54,11 +38,13 @@
       top: 14px;
       width: 5px;
     }
-  }
-
-  a.tag {
-    color: $white;
-    display: inline-block;
-    text-decoration: none;
+    @each $name, $tag-color in $tag-colors {
+      &.#{$name} {
+        background-color: #{$tag-color};
+        &:before {
+          border-left: 10px solid #{$tag-color};
+        }
+      }
+    }
   }
 }
