--- a/scss/vars/_global.scss
+++ b/scss/vars/_global.scss
@@ -25,7 +25,7 @@ $breakpoints: (
 $grid-type: 'flex'; // flex or float
 $grid-columns: 12;
 $grid-column-gutter: 0 2%;
-$content-margin: 4em 0 5em;
+$content-margin: 0;
 $content-padding: 2em 0 6em;
 
 // Asset paths
